[project]
name = "resto-analysis"
version = "0.1.0"
description = "A Python package for accessing and analyzing restaurant data with Clerk authentication and Supabase integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clerk-backend-api>=1.8.0",
    "pandas>=2.2.3",
    "supabase>=2.13.0",
]
